# jarvis2

./: .bowerrc  .gitattributes  .gitignore  .jshintrc  .travis.yml  Dockerfile  Gruntfile.js  LICENSE  Makefile  Pipfile  README.md  Vagrantfile  WIDGETS.md  app.py  bower.json  config.yml  dev-requirements.in  dev-requirements.txt  fabfile.py  gulpfile.js  jobs.py  package.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-to-freeze.txt  requirements.in  requirements.txt  requirements3.txt  run.py  workers.py
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: config.py.sample  create_widget.py  google-api.py  google_api_auth.py  jobs.py  main.py  run.py  tests.py
app/jobs/: __init__.py  atb.py  avinor.py  calendar.py  gmail.py  hackernews.py  imap.py  nsb.py  ping.py  plex.py  sonos.py  stats.py  steam.py  stockquotes.py  uptime.py  yr.py
app/static/: main.css  main.js
app/templates/: index.html  layout.html  layout_single.html
app/test_data/: atb.json  hn.html  nsb.html  nsb2.html  nsb3.html  varsel.xml  varsel2.xml
docs/: INSTALL.md  WIDGETS.md
jarvis/: app.py  config.py.sample  run.py  run_job.py  tests.py
jarvis/jobs/: __init__.py  atb.py  avinor.py  calendar.py  flybussen.py  gmail.py  hackernews.py  imap.py  mock.py  nsb.py  ping.py  plex.py  rss.py  sonos.py  stats.py  stockquotes.py  uptime.py  vaernesekspressen.py  (+1 more)
provisioning/: development  playbook.yml  production
support/: create_dashboard.py  create_widget.py  google_api_auth.py  plex_app_token.py
templates/: index.html  layout.html  styles.css
(+164 files in other folders)
