[project]
name = "jarvis2"
version = "0.1.0"
description = "Awesome dashboard built with Flask and Mithril"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "cssmin>=0.2.0",
    "flask>=3.1.3",
    "flask-assets>=2.1.0",
    "google-api-python-client>=2.193.0",
    "jinja2>=3.1.6",
    "oauth2client>=4.1.3",
    "requests>=2.33.1",
    "soco>=0.30.14",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
